--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "array-includes": "^3.0.3",
     "mint-ui": "^2.2.13",
+    "object-keys": "^1.0.12",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
@@ -47,6 +49,7 @@
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
+    "vuex": "^3.1.0",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
